# product-service/core/src/main/java/io/github/spring/middleware/product/entity/ProductEntity.java
@@ -19,6 +19,9 @@ public class ProductEntity {
     @Id
     private UUID id;
 
+    @Indexed
+    private UUID catalogId;
+
     @Indexed(unique = true)
     private String sku;
 
